Downgrade to java 11 (#78)
Delta-standalone depends on Hadoop which in turn cannot run on Java 17 (https://issues.apache.org/jira/browse/HADOOP-17177).
For this reason we need to downgrade to java 11 for the time being.